# tleilax_cpp

./: .gitignore  CMakeLists.txt  README.md  _headers  main.cpp  raylib-instancing.cpp
.github/workflows/: main.yml  test.yml
assets/json/: ship_components.json  ships.json
assets/shaders/: base.fs  base_lightning_instanced.vs  lighting.fs
assets/shaders/glsl100/: blackhole.fs  bloom.fs  lighting.fs
cmake/: fetch-entt.cmake  fetch-googletest.cmake
include/: Galaxy.h  assets.h  assets.hpp  battle.hpp  colors.h  colors.hpp  components.h  components.hpp  core.h  core.hpp  events.h  events.hpp  fleet.h  fleet.hpp  galaxy.h  galaxy.hpp  graph.h  graph.hpp  graphics_base.h  graphics_base.hpp  name_generator.h  name_generator.hpp  path.h  path.hpp  raylib_extension.h  rlights.h  ship.h  ship.hpp  star_system.h  star_system.hpp  tleilax.h  tleilax.hpp
include/imgui/: rlImGui.h
lib/: Assets.cpp  CMakeLists.txt  Fleet.cpp  Galaxy.cpp  Graph.cpp  Path.cpp  Tleilax.cpp  tleilax.cpp
lib/galaxy/: Galaxy.cpp  RenderGalaxy.cpp  UIGalaxy.cpp
lib/imgui/: imgui_demo.cpp  imgui_widgets.cpp  rlImGui.cpp
lib/renderables/: galaxy.cpp  intro.cpp
src/: Assets.cpp  CMakeLists.txt  Core.cpp  Fleet.cpp  Graph.cpp  Tleilax.cpp  rlights.c
src/battle/: Battle.cpp  RenderBattle.cpp
src/galaxy/: Galaxy.cpp  RenderGalaxy.cpp  UIGalaxy.cpp
src/starsystem/: RenderStarSystem.cpp  StarSystem.cpp
test/: CMakeLists.txt  test_components.cpp  test_galaxy.cpp  test_graph.cpp  test_path.cpp  test_ships.cpp  test_tleilax-lib.cpp
